--- a/build.yaml
+++ b/build.yaml
@@ -12,8 +12,8 @@ description: |
 category: "Authentication"
 artifacts:
   - "SSO-Auth.dll"
-  - "Duende.IdentityModel.OidcClient.dll"
-  - "Duende.IdentityModel.dll"
+  - "IdentityModel.OidcClient.dll"
+  - "IdentityModel.dll"
 changelog: |
   3.5.3.0: Allow for OID-provided avatars, various bugfixes and workarounds
   3.5.2.4: Updates for Jellyfin 10.9
@@ -21,7 +21,7 @@ changelog: |
   3.5.2.2: Fix linking page when using new paths
   3.5.2.1: Hotfix for SAML null checks
   3.5.2.0: Allow overriding the scheme used for generating URLs.
-  3.5.1.1: Change iframe URL to point to the web UI instead of the root 
+  3.5.1.1: Change iframe URL to point to the web UI instead of the root
   3.5.1.0: Improved paths! No more obscure "p" versus "r" URLs! Improve final redirect for automatic authentication. Add more configuration options for OpenID discovery.
   3.5.0.0: Add support for Live TV authentication. Fix various null pointer bugs.
   3.4.0.0: Add user self-service for linking existing accounts + managing existing links. Allow IDP accounts to be linked to jellyfin accounts with a different display-name.
